main 01 deleted commints
