# docs/swagger.yaml
@@ -37,7 +37,7 @@ definitions:
     type: object
 info:
   contact: {}
-  description: A comprehensive API for managing pets,
+  description: A comprehensive API for managing pet project indications
   title: Pet Indication Management API
   version: "1.0"
 paths:
@@ -109,40 +109,6 @@ paths:
       summary: Get Objects by Num LS
       tags:
       - objects
-  /api/id:
-    get:
-      consumes:
-      - application/json
-      description: Retrieves the ID and name based on query parameters.
-      parameters:
-      - description: User ID
-        in: query
-        name: id
-        required: true
-        type: string
-      - description: User Name
-        in: query
-        name: name
-        required: true
-        type: string
-      - description: User Age (optional)
-        in: query
-        name: age
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Successful response
-          schema:
-            $ref: '#/definitions/helpers.SuscessResponse'
-        "400":
-          description: Bad request due to missing or unexpected parameters
-          schema:
-            $ref: '#/definitions/helpers.ErrorResponse'
-      summary: Get ID and Name Information
-      tags:
-      - user
   /api/setMeterIndicationByGuid/{guid}/{meter}/{requestId}:
     get:
       consumes:
